--- a/src/app/modules/student/studentboard/studentboard.component.html
+++ b/src/app/modules/student/studentboard/studentboard.component.html
@@ -1,6 +1,6 @@
 
 <mat-card>
-    <mat-card-title>Initial Setting</mat-card-title>
+    <mat-card-title>Student</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content style="margin:5px;max-height: inherit;">
         <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
