--- a/src/app/modules/ClassSubject/subjectdetail/subjectdetail.component.html
+++ b/src/app/modules/ClassSubject/subjectdetail/subjectdetail.component.html
@@ -1,6 +1,6 @@
 <div>
     <div style="padding:15px 15px 10px 15px;">
-        <div style="padding: 15px;"><strong>Subject Detail</strong></div>
+        <div style="padding: 15px;"><strong>Class Subject Detail</strong></div>
 
         <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
         <alert></alert>
@@ -71,16 +71,20 @@
             <ng-container matColumnDef="Active">
                 <mat-header-cell *matHeaderCellDef> Active </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                    <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
+                    <mat-checkbox *ngIf="ClassSubjectList.length>0" (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
                         [checked]="element.Active==1?true:false">
                     </mat-checkbox>
                 </mat-cell>
             </ng-container>
             <ng-container matColumnDef="Action">
                 <mat-header-cell *matHeaderCellDef>
+                    <button [disabled]="loading || Permission=='read'"
+                    matTooltip="save all" mat-mini-fab (click)="SaveAll()">
+                    <mat-icon>all_out</mat-icon>
+                </button>
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                    <button [disabled]="loading || !element.Action || CheckPermission=='read'" matTooltip="save"
+                    <button [disabled]="loading || !element.Action || Permission=='read'" matTooltip="save"
                         mat-mini-fab (click)="UpdateOrSave(element)">
                         <mat-icon>save</mat-icon>
                     </button>
