--- a/src/app/modules/control/roleapppermission/RoleAppPermissiondashboard/RoleAppPermissiondashboard.component.scss
+++ b/src/app/modules/control/roleapppermission/RoleAppPermissiondashboard/RoleAppPermissiondashboard.component.scss
@@ -5,6 +5,9 @@
 .mat-column-Id{
     flex:0 0 5%;
  }
- mat-cell:first-of-type{
-     padding-left: 0px;
- }
+@media only screen and (max-width: 600px) {
+    mat-cell:first-of-type{
+        padding-left: 0px;
+    }
+}
+
