--- a/src/app/modules/control/roleuser/roleuserdashboard/roleuserdashboard.component.html
+++ b/src/app/modules/control/roleuser/roleuserdashboard/roleuserdashboard.component.html
@@ -1,76 +1,68 @@
-<!-- <div #container>
 <div style="padding:15px 15px 10px 15px;">
-    <div><strong>Application Roles Users</strong></div>
+    <div><strong>Role User Mapping</strong></div>
 </div>
-<mat-spinner  *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
+<mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
 <alert></alert>
-<div style="padding: 20px;height:450px" fxLayout="row wrap"> -->
-<mat-card>
-    <mat-card-title>Role User Mapping</mat-card-title>
-    <mat-card-subtitle>&nbsp;</mat-card-subtitle>
-    <mat-card-content>
-        <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
-        <alert></alert>
-        <div fxLayout="row" fxLayoutAlign="center center">
-            <form [formGroup]="searchForm">
-                <mat-form-field [style.width.px]="250" appearance="outline">
-                    <mat-label>Name</mat-label>
-                    <input type="text" matInput formControlName="searchUserName" [matAutocomplete]="auto">
-                    <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-                        <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-                            {{option.UserName}}
-                        </mat-option>
-                    </mat-autocomplete>
+<div fxLayout="row" fxLayoutAlign="start center">
+    <form [formGroup]="searchForm">
+        <mat-form-field [style.width.px]="250" appearance="outline">
+            <mat-label>Name</mat-label>
+            <input type="text" matInput formControlName="searchUserName" [matAutocomplete]="auto">
+            <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+                <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                    {{option.UserName}}
+                </mat-option>
+            </mat-autocomplete>
+        </mat-form-field>
+        <button [disabled]="loading" class="mat-raised-button" (click)="GetRoleUser()">
+            <mat-icon>search</mat-icon>
+        </button>
+    </form>
+</div>
+<div [ngClass]="{'disableDiv': RoleUserId!=0}">
+    <mat-table #table [dataSource]="dataSource" matSort>
+        <ng-container matColumnDef="User">
+            <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef mat-sort-header>Name
+            </mat-header-cell>
+            <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
+                {{element.User}}
+            </mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="RoleId">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Role </mat-header-cell>
+            <mat-cell *matCellDef="let element">
+                <mat-form-field>
+                    <mat-label>role</mat-label>
+                    <mat-select [value]="element.RoleId" (selectionChange)="onBlur(element)"
+                        [(ngModel)]="element.RoleId">
+                        <mat-option *ngFor="let item of Roles" [value]="item.MasterDataId">
+                            {{item.MasterDataName}}</mat-option>
+                    </mat-select>
                 </mat-form-field>
-                <button [disabled]="loading" class="mat-raised-button" (click)="GetRoleUser()">
-                    <mat-icon>search</mat-icon>
-                </button>
-            </form>
-        </div>
-        <div [ngClass]="{'disableDiv': RoleUserId!=0}">
-            <mat-table #table [dataSource]="dataSource" matSort>
-                <ng-container matColumnDef="User">
-                    <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef mat-sort-header>Name
-                    </mat-header-cell>
-                    <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
-                        {{element.User}}
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="RoleId">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header> Role </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        <mat-form-field>
-                            <mat-label>role</mat-label>
-                            <mat-select [value]="element.RoleId" (selectionChange)="onBlur(element)" [(ngModel)]="element.RoleId">
-                                <mat-option *ngFor="let item of Roles" [value]="item.MasterDataId">
-                                    {{item.MasterDataName}}</mat-option>
-                            </mat-select>
-                        </mat-form-field>
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="Active">
-                    <mat-header-cell *matHeaderCellDef> Active </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        <mat-checkbox [checked]="element.Active==1?true:false" (change)="updateActive(element,$event)">
-                        </mat-checkbox>
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="Action">
-                    <mat-header-cell *matHeaderCellDef>
-                        <!-- <button [disabled]="loading" mat-mini-fab (click)="addnew()">
+            </mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="Active">
+            <mat-header-cell *matHeaderCellDef> Active </mat-header-cell>
+            <mat-cell *matCellDef="let element">
+                <mat-checkbox [checked]="element.Active==1?true:false" (change)="updateActive(element,$event)">
+                </mat-checkbox>
+            </mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="Action">
+            <mat-header-cell *matHeaderCellDef>
+                <!-- <button [disabled]="loading" mat-mini-fab (click)="addnew()">
                             <mat-icon>add</mat-icon>
                         </button> -->
-                    </mat-header-cell>
-                    <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                        <button [disabled]="loading || !element.Action || Permission=='read'" mat-mini-fab (click)="UpdateOrSave(element)">
-                            <mat-icon matTooltip="save">save</mat-icon>
-                        </button>
-                    </mat-cell>
-                </ng-container>
-                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
-            </mat-table>
-            <mat-paginator [pageSizeOptions]="[10,25,100]"></mat-paginator>
-        </div> 
-    </mat-card-content>
-</mat-card>
+            </mat-header-cell>
+            <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
+                <button [disabled]="loading || !element.Action || Permission=='read'" mat-mini-fab
+                    (click)="UpdateOrSave(element)">
+                    <mat-icon matTooltip="save">save</mat-icon>
+                </button>
+            </mat-cell>
+        </ng-container>
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
+    </mat-table>
+    <mat-paginator [pageSizeOptions]="[10,25,100]"></mat-paginator>
+</div>
