--- a/src/app/modules/student/searchstudent/searchstudent.component.scss
+++ b/src/app/modules/student/searchstudent/searchstudent.component.scss
@@ -39,6 +39,9 @@ mat-header-cell{
     text-align: center;
     
 }
+.mat-column-Action{
+    justify-content: center;
+}
 table{
     min-width: 300px;
 }
