--- a/src/app/modules/ClassSubject/subjectboard/subjectboard.component.html
+++ b/src/app/modules/ClassSubject/subjectboard/subjectboard.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <mat-card-title>Subject</mat-card-title>
+    <mat-card-title>Class Subject</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content>
         <div style="margin:5px">
