--- a/src/app/modules/generalreport/excel-data-management/excel-data-management.component.html
+++ b/src/app/modules/generalreport/excel-data-management/excel-data-management.component.html
@@ -6,22 +6,21 @@
         <input [hidden]="true" #inputfile type="file" class="form-control" (change)="browseOnChange($event)"
             placeholder="Upload file" accept=".xlsx">
     </div>
+    <alert></alert>
     <span fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
         <span>{{selectedFile}}</span>
-        <button [disabled]="loading" class="mat-raised-button" matTooltip="select file" color="primary"
-            (click)="inputfile.click()">
-            <mat-icon aria-label="photo">attach_file</mat-icon>
-        </button>
         <mat-form-field appearance="outline">
             <mat-label>Upload For</mat-label>
             <mat-select formControlName="UploadTypeId" (selectionChange)="onselectchange($event)">
-                <mat-option value="0">---</mat-option>
                 <mat-option *ngFor="let p of UploadTypes" [value]="p.MasterDataId">
                     {{p.MasterDataName}}
                 </mat-option>
             </mat-select>
         </mat-form-field>
-
+        <button [disabled]="loading" class="mat-raised-button" matTooltip="select file" color="primary"
+            (click)="inputfile.click()">
+            <mat-icon aria-label="photo">attach_file</mat-icon>
+        </button>
         <button [disabled]="loading" type="submit" (click)="readAsJson()" matTooltip="upload file"
             class="mat-raised-button">
             <mat-icon aria-label="file_upload">file_upload</mat-icon>
@@ -30,6 +29,18 @@
     <mat-divider></mat-divider>
     <span style="color:red" [innerHTML]="ErrorMessage">
     </span>
+    <!-- <mat-table #table [dataSource]="dataSource" matSort>
+        <ng-container *ngFor="let disCol of DisplayColumns; let colIndex = index" matColumnDef="{{disCol}}">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>{{disCol}}
+            </mat-header-cell>
+            <mat-cell *matCellDef="let element">              
+                {{element[disCol]}}
+            </mat-cell>
+        </ng-container>
+        <mat-header-row *matHeaderRowDef="DisplayColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: DisplayColumns;" class="element-row"></mat-row>
+    </mat-table>
+    <mat-paginator *ngIf="ReportConfigItemList.length>0" [pageSizeOptions]="[10,25,100]"></mat-paginator> -->
     <div *ngFor="let item of jsonData" fxLayout="row" fxLayoutAlign="space-between center">
         <div>{{item.Name}}</div>
         <div>{{item.FatherName}}</div>
