--- a/src/app/modules/schoolreports/today-collection/today-collection.component.html
+++ b/src/app/modules/schoolreports/today-collection/today-collection.component.html
@@ -1,7 +1,8 @@
 <div style="padding:15px">
     <strong>Date wise collection</strong>
 </div>
-
+<alert></alert>
+<mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
 <form [formGroup]="SearchForm">
     <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="30px">
         <mat-form-field appearance="outline" [style.width.px]="270">
