--- a/src/app/modules/student/studentattendancereport/studentattendancereport.component.html
+++ b/src/app/modules/student/studentattendancereport/studentattendancereport.component.html
@@ -1,47 +1,14 @@
 <div style="padding: 15px;"><strong>Student Attendance</strong></div>
 <alert></alert>
 <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
-<!-- <form [formGroup]="searchForm">
-    <mat-form-field appearance="outline">
-        <mat-label>Class</mat-label>
-        <mat-select formControlName="searchClassId" (selectionChange)="bindClassSubject()">
-            <mat-option *ngFor="let item of Classes" [value]="item.ClassId">{{item.ClassName}}
-            </mat-option>
-        </mat-select>
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-        <mat-label>Section</mat-label>
-        <mat-select formControlName="searchSectionId">
-            <mat-option *ngFor="let item of Sections" [value]="item.MasterDataId">{{item.MasterDataName}}
-            </mat-option>
-        </mat-select>
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-        <mat-label>Subject</mat-label>
-        <mat-select formControlName="searchClassSubjectId">
-            <mat-option>--select subject--</mat-option>
-            <mat-option *ngFor="let item of FilteredClassSubjects" [value]="item.ClassSubjectId">{{item.ClassSubject}}
-            </mat-option>
-        </mat-select>
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-        <mat-label>Attendance Date</mat-label>
-        <input formControlName="searchAttendanceDate" matInput [matDatepicker]="AttendanceDate" autocomplete="off">
-        <mat-datepicker-toggle matSuffix [for]="AttendanceDate"></mat-datepicker-toggle>
-        <mat-datepicker #AttendanceDate></mat-datepicker>
-    </mat-form-field>
-    <button [disabled]="loading" (click)="GetStudentAttendance()" class="mat-raised-button">
-        <mat-icon>search</mat-icon>
-    </button>
-</form> -->
 <mat-table #table [dataSource]="dataSource" matSort>
-    <ng-container matColumnDef="StudentRollNo">
+    <!-- <ng-container matColumnDef="StudentRollNo">
         <mat-header-cell style="display: flex;" *matHeaderCellDef>Student
         </mat-header-cell>
         <mat-cell *matCellDef="let element">
             {{element.StudentRollNo}}
         </mat-cell>
-    </ng-container>
+    </ng-container> -->
     <ng-container matColumnDef="AttendanceDate">
         <mat-header-cell style="display: flex;" *matHeaderCellDef mat-sort-header>Date
         </mat-header-cell>
@@ -65,4 +32,9 @@
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
 </mat-table>
+<div style="padding-top: 15px;">
+<div *ngFor="let item of AttendanceStatusSum">
+    {{item.AttendanceStatus==1?'Total Present - ':'Total Absent - '}} {{item.Total}}
+</div>
+</div>
 <mat-paginator [pageSizeOptions]="[10,20,50]"></mat-paginator>
